added UUID, get stations management
